--- a/style.css
+++ b/style.css
@@ -1,85 +1,134 @@
 
-@font-face {
-  font-family: "Digital";
-  src: url('./@font-face/8e22783d707ad140bffe18b2a3812529.woff');
-}
-
-button {
-    border-color: gray;
-    color: white;
-    font-size: 11px;
-}
+html, body {
+    height: 100%;
+    font-family: Calibri;
+    user-select: none;
+  }
 
 
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+/* HEADER STYLES */
+header{
+    width: 100%;
+    Height:80px;
+    max-height: 50%;
+    background-color: lightgrey;
+    }
+    h1 {
+        font-size: 20px;
+        font-weight: bold;
+        font-weight:1000;
+        color:black;
+        text-align: center;
+        }
+    header nav ul{ 
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        }
+    header nav ul li{
+        font-size: 14px;
+        color:black;
+        text-align: center;
+        display: inline-block;
+        float: none;
+        list-style: none;
+        Margin: 0px 20px 0px;
+        }
 
-.grid-container {
-    margin-top: 300px;
-    display: grid;
-    grid-template-columns: 80px 80px 80px 80px ;
-    grid-template-rows: 65px 65px 65px 65px 65px 65px ;
-    background-color: #2196F3;
-    width: 320px;
-    padding: 5px;
-    background-color: black;
-    color: white;
-}
-
-.grid-item {
-    padding: 25px;
-    outline: 1px solid black;
+/*CALCULATOR STYLES & DIMENSIONS */ 
+.calculator {
+    /* Dimensions */
+    display: block;
+    width: 270px;
+    height: 470px;
+    border:4px solid Grey;
+    background-image: url("images/Background.jpg");
+    margin: 10px auto;
+    /* Calculator Edges */
+    border-top-left-radius: 80%20px;
+    border-top-right-radius: 80%20px;
+    border-bottom-left-radius: 80%20px;
+    border-bottom-right-radius: 80%20px;
+    /* Text Style*/
     text-align: center;
-    background-color: #4D4D4D;
-}
+    padding-top: 5px;
+    margin-bottom: -10px;
+    color: darken(grey, 10);
+    font-size: 13px;
+    }
+/* DISPLAY BOX */
+.display {
+    height: 75px;
+    width: 88%;
+    background-color: rgb(221, 224, 206);
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.7);
+    border-right-width: 1px;
+    border-bottom-width: 2px;
+    color: #000;
+    text-align: right;
+    margin: 5px 16px 10px 16px ;
+    overflow: hidden;
+    border-radius: 6px;
+    }
+.smlDisplay {
+    background-color: rgb(221, 224, 206);
+    width: 95%;
+    height: 12px;
+    margin: 0px 5px -10px 0px;
+    direction: ltr;
+    font-size: 12px;
+    }
+.lrgDisplay {
+    background-color: rgb(221, 224, 206);
+    width: 95%;
+    height: 20px;
+    margin: 5px 5px 5px 5px;
+    direction: rtl;
+    font-size: 22px;
+    padding: 0px 0px 10px;
+    }
 
-#display {
-    grid-column: 1 / 5;
-    grid-row: 1 / 2;
-    display: grid;
-    grid-template-rows: 50% 50%;
-    text-align: end;
-    padding: 7px;
-    background-color: #000;
-}
 
-#outputDisplay {
-    font-size: 25px;
-    font-family: digital;
-    margin-top: 4px;
-}
+/* BUTTONS  */
+.Button_Array {
+    display: block;}
+button {
+    width: 50px;
+    height: 50px;
+    border: 2px solid lighten rgb(150, 137, 137);
+    border-top: 2px solid lighten(darkGrey, 20);
+    color: white;
+    background-color: rgb(101, 97, 109); 
+    font-size: 1.1em;
+    border-radius: 20%;
+    border-top-left-radius: 80%10px;
+    border-top-right-radius: 80%10px;
+    border-bottom-left-radius: 100%10px;
+    border-bottom-right-radius: 100%10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 8px;
+    cursor: pointer;
+    }
+    button:active{
+      transform: scale(0.9);
+      }
+    .ctrl {
+      background-color: red;
+      border-top: 2px solid lighten(red, 20);
+      }
+    .tall {
+      height: 108px;
+      float: right;
+      margin-left:-4px;
+      margin-right: 16px; 
+      }
+      .wide {
+        width: 112px;
+        float: left; 
+        margin-left: 14px;
+        margin-right: -2px;
+        background-color: red;
+        }
 
-#outputDisplay {
-    margin: none;
-}
-
-#clear {
-    grid-column: 1 / 3;
-    background-color: #AC3939;
-}
-
-#equals {
-    grid-column: 4 / 5;
-    grid-row: 5 / 7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #004466;
-}
-
-#zero {
-    grid-column: 1 / 3;
-}
-
-#divide, #multiply, #subtract, #add {
-    background-color: #666666;
-}
- #equation-display {
-    font-size: 20px;
-    font-family: digital;
-    margin-top: 4px;
-    color: #FEA429;
- }
